--- a/public/css/vars.css
+++ b/public/css/vars.css
@@ -11,6 +11,7 @@
     --shadow-color: rgba(0, 0, 0, 0.1);
     --border-radius: 0.5rem;
     --margin-test: 0.625rem;
+    --padding-test: 0.625rem;
     --container-gap:1rem;
     --card-width: 14rem;
     --card-height: auto;
