--- a/views/upload.hbs
+++ b/views/upload.hbs
@@ -51,7 +51,7 @@
                     </div>
                     <input type="file" id="file-input" accept="image/*" style="display:none;">
                     <label for="description">Описание:</label><br>
-                    <textarea name="description" id="description" rows="4" cols="60"
+                    <textarea name="description" id="description" rows="4" cols="calc(15 * 5)"
                         style="resize: vertical;"></textarea><br>
                 </div>
                 <div class="flex-item">
