--- a/public/css/elements/switch.css
+++ b/public/css/elements/switch.css
@@ -28,12 +28,12 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 14px;
-  width: 14px;
+  height: 16px;
+  width: 16px;
   background-color: white;
   border-radius: 50%;
-  bottom: 3px;
-  left: 3px;
+  top: 2px;
+  left: 2px;
   transition: 0.4s;
 }
 
