--- a/views/data.hbs
+++ b/views/data.hbs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link type="image/favicon" rel="shortcut icon" href="/imgs/ori_ico1.svg">
-    <link rel="stylesheet" href="/css/vars.css" type="text/css" />
+  <link rel="stylesheet" href="/css/vars.css" type="text/css" />
   <link rel="stylesheet" href="/css/test.css" type="text/css" />
   <link rel="stylesheet" href="/css/containers/container.css" type="text/css" />
   <link rel="stylesheet" href="/css/containers/tag container.css" type="text/css" />
@@ -15,72 +15,72 @@
 
 <body>
   <div class="page-container">
-  <div class="header">
-    <a class="logo" href="/">
-      <img src="/imgs/ori_ico1.svg" alt="Logo">
-      <span>artX</span>
-    </a>
-    {{!-- <div class="flow-container">
-      <a href="/" style="text-decoration: none; color:white;" class="flow-item">поиск</a>
-      <a class="flow-item">подписки</a>
-    </div> --}}
-    <div class="user">
-      <a href="/user/login">
-        <span>{{userName}}</span>
+    <div class="header">
+      <a class="logo" href="/">
+        <img src="/imgs/ori_ico1.svg" alt="Logo">
+        <span>artX</span>
       </a>
-      {{#if isAuthenticated}}
-      <button class="menu-button">
-        <img src="/imgs/settings.svg" width="24px">
-      </button>
-      <div class="dropdown-menu hidden">
-        <a href="/user/settings">
-          <div class="menu-item"><span>настройки</span></div>
+      {{!-- <div class="flow-container">
+        <a href="/" style="text-decoration: none; color:white;" class="flow-item">поиск</a>
+        <a class="flow-item">подписки</a>
+      </div> --}}
+      <div class="user">
+        <a href="/user/login">
+          <span>{{userName}}</span>
         </a>
-        <a href="/post/upload">
-          <div class="menu-item"><span>загрузить</span></div>
-        </a>
-        <button id="user-exit" class="menu-item">выйти</button>
+        {{#if isAuthenticated}}
+        <button class="menu-button">
+          <img src="/imgs/settings.svg" width="24px">
+        </button>
+        <div class="dropdown-menu hidden">
+          <a href="/user/settings">
+            <div class="menu-item"><span>настройки</span></div>
+          </a>
+          <a href="/post/upload">
+            <div class="menu-item"><span>загрузить</span></div>
+          </a>
+          <button id="user-exit" class="menu-item">выйти</button>
+        </div>
+        <script src="/js/elements/header.js"></script>
+        {{/if}}
       </div>
-      <script src="/js/elements/header.js"></script>
-      {{/if}}
     </div>
-  </div>
 
-  <div class="main-content">
-    <div class="content">
+    <div class="main-content">
       <div class="search_container">
+        <link rel="stylesheet" href="/css/elements/switch.css" type="text/css" />
         <input type="search" placeholder="Добавить тег..." class="tag-input" id="tag-input"
           oninput="searchTags(event)" />
         <div id="tag-dropdown" class="tag-dropdown"></div>
         <button class="clear-search-tags">X</button>
-        <div id="tag-list" class="tag-container" style="border:none;">
-        </div>
+        <div id="tag-list" class="tag-container" style="border:none;"></div>
       </div>
-      
-      <!--<div><a class="adv-image" id="advertisement-image-top-a" style="width:500px;" href="" alt="" target="_blank"
+      <div class="content">
+
+        <!--<div><a class="adv-image" id="advertisement-image-top-a" style="width:500px;" href="" alt="" target="_blank"
           title="" border="0">
           <img id="advertisement-image-top" src="" alt="Advertisement"></a>
         <script src="/js/get-random-adv.js"></script>
       </div>-->
-      {{!-- {{> (lookup . "pageContent") }} --}}
-      <div id="item-container" class="card-container"></div>
-      <script src="/js/get-simple-image-data.js"></script>
+        {{!-- {{> (lookup . "pageContent") }} --}}
+        <div id="item-container" class="card-container"></div>
+        <script src="/js/get-simple-image-data.js"></script>
+      </div>
     </div>
-  </div>
-  <footer class="footer">
-    <div class="footer-item">
-      <img src="/imgs/author-icon.svg" alt="Автор" class="footer-icon">
-      <span>Емельяненко Савелий</span>
-    </div>
-    <div class="footer-item">
-      <img src="/imgs/ori_ico1.svg" alt="Email" class="footer-icon">
-      <a href="mailto:ivan.ivanov@example.com">Sovergon15@gmail.com</a>
-    </div>
-    <div class="footer-item">
-      <img src="/imgs/about-icon.svg" alt="О проекте" class="footer-icon">
-      <a href="/about">О проекте</a>
-    </div>
-  </footer>
+    <footer class="footer">
+      <div class="footer-item">
+        <img src="/imgs/author-icon.svg" alt="Автор" class="footer-icon">
+        <span>Емельяненко Савелий</span>
+      </div>
+      <div class="footer-item">
+        <img src="/imgs/ori_ico1.svg" alt="Email" class="footer-icon">
+        <a href="mailto:ivan.ivanov@example.com">Sovergon15@gmail.com</a>
+      </div>
+      <div class="footer-item">
+        <img src="/imgs/about-icon.svg" alt="О проекте" class="footer-icon">
+        <a href="/about">О проекте</a>
+      </div>
+    </footer>
   </div>
   <script>
     const tagSearcher = document.querySelector('.tag-input');
@@ -130,7 +130,12 @@
       const newTag = document.createElement("div");
       newTag.className = "tag";
       newTag.id = `tag-id-${tagId}`;
-      newTag.innerHTML = `${tagName} <span class="close" onclick="removeTag('${tagId}')">&times;</span>`;
+      newTag.innerHTML = `
+      <label class="switch">
+        <input type="checkbox">
+        <span class="slider"></span>
+      </label>
+      ${tagName} <span class="close" onclick="removeTag('${tagId}')">&times;</span>`;
       tagList.appendChild(newTag);
 
       document.getElementById("tag-dropdown").style.display = "none";
