--- a/public/css/containers/tag container.css
+++ b/public/css/containers/tag container.css
@@ -58,7 +58,10 @@
     align-items: center;
     gap: 5px;
 }
-
+.tag .name{
+    padding-right: 5px;
+    padding-left: 5px;
+}
 .close {
     cursor: pointer;
     font-weight: bold;
