--- a/public/css/vars.css
+++ b/public/css/vars.css
@@ -23,5 +23,7 @@
     --thumbnail-max-width: 100%;
     --like-color: #ff1100;
     --dislike-color: #000000;
+    --unchecked-color:rgb(0, 255, 0);
+    --checked-color:rgb(255, 0, 0);
     --hover-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
 }
